# SimpleTCP

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  client_socket.cpp  client_socket.h  main.cpp  utils.cpp  utils.h
server/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  server.cpp  server.h  server_socket.cpp  server_socket.h  session.cpp  session.h  socket.cpp  socket.h  utils.cpp
